Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74818

Word missing in docs

XMLWordPrintable

    • c6cb03e61ed17c92b316ab0d6af86278c6abd45c (qt/qtgamepad/5.12.3)

      In the https://doc.qt.io/qt-5/qml-qtgamepad-gamepad.html#buttonDown-prop section the second word "state" is missing.

        For Gerrit Dashboard: QTBUG-74818
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            fsch Anonymous (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes