Doc: Add missing word in description of buttonDown

Fixes: QTBUG-74818
Change-Id: I5e780c6a466afaec4b4efa3f63e8b9607471f651
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>